# game-of-life

./: Cargo.toml
examples/: custom_game.sav  random_game.sav
src/: args.rs  board.rs  main.rs
